--- a/server/package.json
+++ b/server/package.json
@@ -15,17 +15,26 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/debug": "^4.1.12",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
-    "@types/node": "^22.7.7",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^22.7.8",
     "concurrently": "^9.0.1",
     "debug": "^4.3.7",
     "dotenv": "^16.4.5",
+    "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "express": "^4.21.1"
+    "bcrypt": "^5.1.1",
+    "express": "^4.21.1",
+    "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.13.0",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.20"
   }
 }
